<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMeasureActivity">

    <TextView
        android:id="@id/addMeasureTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/addmeasuredE"
        android:hint="@string/measured_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/addMeasureTextView"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/adddeviceE"
        android:hint="@string/device_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/addmeasuredE"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/adddoctorE"
        android:hint="@string/doctor_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/adddeviceE"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/addsinceE"
        android:hint="@string/last_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/adddoctorE"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/addconditionE"
        android:hint="@string/condition_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/addsinceE"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/adddateE"
        android:hint="@string/date_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/addconditionE"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/addcommentE"
        android:hint="@string/comment_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/adddateE"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/patienteNameE"
        android:hint="@string/name_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/addcommentE"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patienteNameE">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onEditMeasure"
            android:text="@string/create" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:onClick="onCancel"
            android:text="@string/cancel" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>